refactor(sitemesh): further Java 17 idioms (List.of, switch expr, record)
- Arrays.asList(varargs) -> List.of(varargs) in builder addAll/field init
  (List.of rejects nulls, which is acceptable as these are public API knobs)
- BasicBlockRule: classic switch -> switch expression with arrow form
- BasicBlockRule.DataHolder: private static class -> record, accessors
  updated accordingly (private type, no external callers)